# esp32L

./: README.md
demo/: .gitignore  CMakeLists.txt  README.md  main.7z  sdkconfig
demo/main/: CMakeLists.txt  My_nvs_storage.c  My_nvs_storage.h  hello_world_main.c  idf_component.yml  ledc_motor_pwm.c  ledc_motor_pwm.h  sht30.c  sht30.h  tcp_client.c  tcp_client.h  ultrasonic.c  ultrasonic.h  wifi_manager.c  wifi_manager.h
